pulled admin profile from prod, renamed to next gen

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -305,7 +305,7 @@
 		<name>CustomObject</name>
 	</types>
 	<types>
-		<members>Next Gen Force%2Ecom</members>
+		<members>Admin</members>
 		<name>Profile</name>
 	</types>
 	<types>
